Added more static pages

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -70,3 +70,10 @@ es:
         title: 'Respetar a los animales es propio de una sociedad civilizada'
         paragraph1: 'Estas son solo algunas de las razones por las que debemos cuidar de los gatos de nuestra ciudad.'
       action: 'Si quieres saber más sobre nuestra campaña pulsa aquí.'
+    learn:
+      manifest: 'Convivir con la liga gatuna'
+      article0: 'La colonia es el espacio donde Covi y el resto de superhéroes descansan. Por favor, trata de no correr, saltar o gritar porque puedes asustarlos.'
+      article1: 'Si te acercas a la colonia con tu perro no olvides llevarlo sujeto con su correa. De este modo velarás por su seguridad y la de los gatos.'
+      article2: '¡Es la hora de la comida! Cuando veas a los voluntarios cuidando de nuestros héroes haz caso a todas sus indicaciones, ya que algunos son muy asustadizos y necesitan cuidados especiales.'
+      article3: 'Los amigos de Covi siguen una alimentación equilibrada y controlada por los voluntarios para mantenerse en forma antes de cada misión. Es muy importante que no les des nada de comer para que sigan así de fuertes y poderosos.'
+      article4: 'Respeta su espacio.'
