renames sponsor to sponsorship

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -8,7 +8,7 @@ es:
         title: 'Colabora'
         text_1: 'Nuestra misión es posible gracias a la ayuda de la comunidad. Personas como tú que reconocen la importancia de la diversidad, del respeto y de la convivencia.  Y sobretodo con los seres indefensos e invisibilizados en nuestra sociedad.'
         text_2: 'Necesitamos tu ayuda, la de tu prima y la de tu vecino del cuarto. No te preocupes, existen distintas formas para hacerlo.'
-      sponsor:
+      sponsorship:
         title: 'Apadrina'
         text:  'Dentro de la Colonia hay espíritus indomables, que viven en libertad y no se pueden adaptar a un nuevo hogar fácilmente. A ellos también puedes ayudarles apadrinándolos para asegurarles una vida digna.'
       adopt:
